Closed Bug 844941 Opened 11 years ago Closed 11 years ago

dom.event.clipboardevents.enabled shouldn't apply to chrome

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: enndeakin, Assigned: enndeakin)

References

Details

Attachments

(1 file, 1 obsolete file)

The copy/paste preference reference at http://mxr.mozilla.org/mozilla-central/source/content/base/src/nsCopySupport.cpp#712 should only apply to content pages.
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #812645 - Attachment is obsolete: true
Attachment #812917 - Flags: review?(ehsan)
Attachment #812917 - Flags: review?(ehsan) → review+
https://hg.mozilla.org/mozilla-central/rev/49ae6071d71d
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
See Also: → 956132
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: