Bug 844941, only check dom.event.clipboardevents.enabled preference in non-chrome shells, r=ehsan